Remove entwine from common
Removes entwine code from the common module.